# storm-core

./: .dockerignore  .drone.yml  .editorconfig  .gitignore  .readthedocs.yml  CHANGES.rst  CLI.rst  INSTALL.rst  MANIFEST.in  README.rst  docker-compose.yaml  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py
bdcrrm_api/: __init__.py  config.py  engine.py  environment.py  graph.py  graph_executor.py  hasher.py  persistence.py  project.py  reprozip.py  version.py
bdcrrm_api/cli/: __init__.py  cli.py  operations.py
bdcrrm_api/cli/commands/: __init__.py  production.py  project.py  project_graph.py  project_inputs.py  project_settings.py  reproduction.py  utils.py
bdcrrm_api/cli/graphics/: __init__.py  graph.py  tables.py  trees.py
bdcrrm_api/engine/: config.py
bdcrrm_api/engine/inspector/: config.py
bdcrrm_api/graph/index/: indexer.py
bdcrrm_cli/: __init__.py  config.py  engine.py  executor.py  graph.py  hasher.py  persistence.py  project.py  reprozip.py  version.py
bdcrrm_cli/cli/: cli.py  operations.py
docker/: Dockerfile.base  Dockerfile.jupyter
docs/sphinx/: Makefile  api.rst  conf.py  history.rst  index.rst  installation.rst  license.rst  repository.rst  usage.rst
examples/: example.py
examples/local-cubes/: README.Rmd  README.md  pipeline.sh
examples/local-cubes/.bdcrrm/: project.yml
examples/local-cubes/analysis/: local-cube.ipynb
examples/local-cubes/auxiliary/: download.sh  generate-template-files.py
examples/lulc-classification/: README.md  README.rmd
examples/lulc-classification-cbers/: DESCRIPTION  Dockerfile  README.Rmd  README.md  build.sh  pipeline.sh
examples/lulc-classification-cbers/.bdcrrm/: project.yml
examples/lulc-classification-cbers/analysis/: .pipeline.R  01_extract_ts.R  02_classify.R  02_training_model.R  03_classify.R
examples/lulc-classification-cbers/data/raw_data/: roi.rds
examples/lulc-classification-lc8/: Dockerfile  LICENSE  README.Rmd  README.md  build.sh  pipeline.sh
examples/lulc-classification-lc8/.bdcrrm/: project.yml
examples/lulc-classification-lc8/analysis/: .pipeline.R  01_extract_ts.R  02_training_model.R  03_classify.R
examples/lulc-classification-lc8/data/raw_data/: training-samples.csv
examples/lulc-classification-modis/: DESCRIPTION  Dockerfile  README.Rmd  README.md  build.sh  pipeline.sh
examples/lulc-classification-modis/.bdcrrm/: project.yml
examples/lulc-classification-modis/analysis/: .pipeline.R  02_training_model.R  03_classify.R  supercube.R
examples/lulc-classification-modis/config/: sits_config.yml
examples/lulc-classification/.bdcrrm/: meta  project.yml
examples/lulc-classification/R/: 01_extract_ts.R  02_classify.R
examples/mini-tour/: LICENSE  README.Rmd  README.md
examples/mini-tour/.bdcrrm/: project.yml
examples/mini-tour/scripts/: script_1.py  script_2.py  script_3.py  script_4.py
examples/parallel-reproduction/: Dockerfile  README.Rmd  README.md  build.sh  pipeline.sh  setup.py
examples/parallel-reproduction/.bdcrrm/: project.yml
examples/parallel-reproduction/analysis/: config.py  main.py  pipeline.py
examples/parallel-reproduction/rr_water_mask/: __init__.py  parallelly.py  spectral_index.py  stac.py
storm_core/: __init__.py  parser.py  reprozip.py  version.py
storm_core/core/: __init__.py  accessor.py  compendium.py  operations.py  pipeline.py
storm_core/engine/: component.py  config.py  execution_engine.py
storm_core/engine/component/: base.py  decorator.py
storm_core/engine/executor/api/: job.py  (+2 more)
storm_core/engine/inspector/: components.py  config.py  inspector.py
storm_core/engine/metadata/: builder.py  components.py  config.py
storm_core/execution/: __init__.py  command.py  config.py  engine.py  plan.py
storm_core/execution/component/: __init__.py  base.py  decorator.py
storm_core/execution/job/: __init__.py  base.py  command.py  compendium.py
storm_core/graph/: __init__.py  manager.py
storm_core/graph/index/: indexer.py  search.py
storm_core/helper/: exporter.py  hasher.py  mutator.py  persistence.py  plotting.py  serializer.py
storm_core/index/: accessor.py  indexer.py  model.py  search.py
storm_core/index/graph/: __init__.py  manager.py
storm_core/op/: __init__.py  mutator.py  operation.py  session.py
storm_core/parser/: __init__.py  files.py  shell.py  stormfile.py
tests/: __init__.py  test_bdcrrm_cli.py  test_graph.py  test_reprozip.py
(+21 files in other folders)
