[tool.poetry]
name = "storm-core"
version = "0.1.0"
description = "Storm Core is a Python library that provides features to reproducible research development."
authors = ["Felipe Menino Carlos <efelipecarlos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
plumbum = "^1.7.1"
reprozip = "^1.1"
reprounzip-docker = "^1.1"
igraph = "^0.9.8"
dictdiffer = "^0.9.0"
storm-hasher = { git = "https://github.com/storm-platform/storm-hasher.git" }
ray = { version = "^1.9.0", optional = true }
paradag = { version = "^1.2.0", optional = true }
"ruamel.yaml" = "^0.17.17"
dill = "^0.3.4"

[tool.poetry.extras]
ray-backend = ["ray"]
paradag-backend = ["paradag"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
