[tool.poetry]
name = "storm-core"
version = "0.1.0"
description = "Python library to create, manage and reproduce scientific analyses."
authors = ["Felipe Menino Carlos <efelipecarlos@gmail.com>"]
license = "MIT"
classifiers = [
    'Development Status :: 1 - Planning',
    'Environment :: Web Environment',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering :: GIS',
]

[tool.poetry.dependencies]
python = "^3.8"
reprozip = "^1.1"
igraph = "^0.9.8"
pandas = "^1.3.5"
plumbum = "^1.7.1"
dictdiffer = "^0.9.0"
"ruamel.yaml" = "^0.17.17"
reprounzip-docker = "^1.1"
storm-hasher = { git = "https://github.com/storm-platform/storm-hasher.git", rev = "5fd1cfd"}

#
# Optional modules
#
dill = { version = "^0.3.4", optional = true }
ray = { version = "^1.9.0", optional = true }
bagit = { version = "^1.8.1", optional = true }
paradag = { version = "^1.2.0", optional = true }
graphviz = { version = "^0.19.1", optional = true }
cairocffi = { version = "^1.3.0", optional = true }

[tool.poetry.extras]

#
# Backends
#
ray-backend = ["ray"]
paradag-backend = ["paradag"]

#
# Optional helpers
#
exporter-helper = ["bagit"]
persistence-helper = ["dill"]
plotting-helper = ["graphviz", "cairocffi"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
